fix: fixed navigation from Policy to Policy Details screen

--- a/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase-details/policy-knowledgebase-details.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase-details/policy-knowledgebase-details.component.html
@@ -13,6 +13,9 @@
  -->
 
 <div class="policy-knowledgebase-wrapper">
+    <div *ngIf="backButtonRequired" class="breadcrumb-container">
+        <app-breadcrumb *ngIf="breadcrumbLinks.length>0" [breadcrumbLinks]="breadcrumbLinks" [breadcrumbArray]="breadcrumbArray" [breadcrumbPresent]="breadcrumbPresent"></app-breadcrumb>
+     </div>
     <div class="header">
         <div class="header-text">
             {{policyDisplayName}}
