feat: added enable,disable,edit with api integration in policy details

--- a/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase-details/policy-knowledgebase-details.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase-details/policy-knowledgebase-details.component.html
@@ -20,7 +20,7 @@
         <div class="header-text">
             {{policyDisplayName}}
         </div>
-        <app-dropdown [items]="actionItems" placeholder="Actions"></app-dropdown>
+        <app-dropdown *ngIf="haveAdminPageAccess" (selected)="goToDetails($event)" [items]="actionItems" placeholder="Actions"></app-dropdown>
     </div>
     <div class="overview-wrapper">
         <div class="column">
