--- a/webapp/src/app/shared/components/molecules/dialog-box/dialog-box.component.html
+++ b/webapp/src/app/shared/components/molecules/dialog-box/dialog-box.component.html
@@ -6,7 +6,9 @@
     <app-text classNames="body-2 low-emphasis" [text]="data.message"></app-text>
   </div>
   <div mat-dialog-actions class="flex gap-8">
-    <app-custom-button style="margin-left: auto" buttonType="stroked" [label]="data.noButtonLabel" (click)="onNoClick()"></app-custom-button>
-    <app-custom-button buttonType="flat" [label]="data.yesButtonLabel" (click)="onYesClick()" [mat-dialog-close]="" cdkFocusInitial></app-custom-button>
+    <app-custom-button *ngIf="data.noButtonLabel" style="margin-left: auto" buttonType="stroked"
+      [label]="data.noButtonLabel" (click)="onNoClick()"></app-custom-button>
+    <app-custom-button *ngIf="data.yesButtonLabel" buttonType="flat" [label]="data.yesButtonLabel"
+      (click)="onYesClick()" [mat-dialog-close]="" cdkFocusInitial></app-custom-button>
   </div>
 </div>
